Issue #2832974 by kruhak, antongp: Make Reference entities revisionable

--- a/modules/bibcite_entity/templates/bibcite-reference.html.twig
+++ b/modules/bibcite_entity/templates/bibcite-reference.html.twig
@@ -4,7 +4,7 @@
  * Default theme implementation to present Reference data.
  *
  * Available variables:
- * - content: All node items. Use {{ content }} to print them all,
+ * - content: All reference items. Use {{ content }} to print them all,
  *   or print a subset such as {{ content.field_example }}. Use
  *   {{ content|without('field_example') }} to temporarily suppress the printing
  *   of a given child element.
