--- a/modules/bibcite_entity/templates/bibcite-contributor.html.twig
+++ b/modules/bibcite_entity/templates/bibcite-contributor.html.twig
@@ -6,13 +6,15 @@
  * Available variables:
  * - content: A list of content items. Use 'content' to print all content, or
  * - attributes: HTML attributes for the container element.
+ * - bibcite_contributor: The contributor object.
+ * - view_mode: View mode.
  *
  * @see template_preprocess_bibcite_contributor()
  *
  * @ingroup themeable
  */
 #}
-<div{{ attributes.addClass('bibcite_contributor') }}>
+<div{{ attributes }}>
   {% if content %}
     {{- content -}}
   {% endif %}
