--- a/modules/bibcite_entity/templates/bibcite-reference.html.twig
+++ b/modules/bibcite_entity/templates/bibcite-reference.html.twig
@@ -17,8 +17,8 @@
  * @ingroup themeable
  */
 #}
-<div{{ attributes }}>
+<article{{ attributes }}>
   {% if content %}
     {{ content }}
   {% endif %}
-</div>
+</article>
