--- a/modules/bibcite_entity/templates/bibcite-reference--table.html.twig
+++ b/modules/bibcite_entity/templates/bibcite-reference--table.html.twig
@@ -4,6 +4,10 @@
  * Theme implementation to present Reference data in table.
  *
  * Available variables:
+ * - title_prefix: Additional output populated by modules, intended to be
+ *   displayed in front of the main title tag that appears in the template.
+ * - title_suffix: Additional output populated by modules, intended to be
+ *   displayed after the main title tag that appears in the template.
  * - content: All reference items. Use {{ content }} to print them all,
  *   or print a subset such as {{ content.field_example }}. Use
  *   {{ content|without('field_example') }} to temporarily suppress the printing
@@ -18,8 +22,9 @@
  * @ingroup themeable
  */
 #}
-
 <div{{ attributes }}>
+  {{ title_prefix }}
+  {{ title_suffix }}
   <table>
     {% if rows %}
       <tbody>
