--- a/modules/bibcite_entity/templates/bibcite-reference.html.twig
+++ b/modules/bibcite_entity/templates/bibcite-reference.html.twig
@@ -4,6 +4,10 @@
  * Default theme implementation to present Reference data.
  *
  * Available variables:
+ * - title_prefix: Additional output populated by modules, intended to be
+ *   displayed in front of the main title tag that appears in the template.
+ * - title_suffix: Additional output populated by modules, intended to be
+ *   displayed after the main title tag that appears in the template.
  * - content: All reference items. Use {{ content }} to print them all,
  *   or print a subset such as {{ content.field_example }}. Use
  *   {{ content|without('field_example') }} to temporarily suppress the printing
@@ -18,6 +22,8 @@
  */
 #}
 <article{{ attributes }}>
+  {{ title_prefix }}
+  {{ title_suffix }}
   {% if content %}
     {{ content }}
   {% endif %}
