--- a/modules/bibcite_entity/templates/bibcite-reference.html.twig
+++ b/modules/bibcite_entity/templates/bibcite-reference.html.twig
@@ -14,7 +14,7 @@
  *   of a given child element.
  * - attributes: HTML attributes for the container element.
  * - bibcite_reference: The bibcite_reference entity with limited access to object properties and methods.
- * - view_mode: View mode; for example, "teaser" or "full".
+ * - view_mode: View mode; for example, "citation" or "default".
  *
  * @see template_preprocess_bibcite_reference()
  *
